# river

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .replit  LICENSE  MIGRATION.md  PROTOCOL.md  README.md  VISION.md  buf.gen.test.yaml  buf.gen.yaml  flake.nix  flake.sh  index.ts  jest.config.js  package-lock.json  package.json  replit.nix  testUtils.ts  tsconfig.json  tsup.config.ts  types.ts  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md  release-drafter-python.yml
__tests__/: abort.test.ts  allocation.test.ts  bandwidth.bench.ts  cancellation.test.ts  cleanup.test.ts  codec.test.ts  context.test.ts  deferCleanup.test.ts  diff.test.ts  disconnects.test.ts  e2e.test.ts  fixtures.ts  fuzz.test.ts  globalSetup.ts  handler.test.ts  integration.test.ts  invalid-request.test.ts  invariants.test.ts  middleware.test.ts  (+10 more)
python-client/: .coverage  .gitignore  pyproject.toml
python-client/river/: __init__.py  client.py  codec.py  session.py  streams.py  transport.py  types.py
python-client/river/codegen/: __init__.py  __main__.py  emitter.py  schema.py
python-client/river/codegen/templates/: errors.py.j2  init.py.j2  root_client.py.j2  service_client.py.j2  types.py.j2
python-client/tests/: conftest.py  extract_test_schema.mjs  extract_test_schema.ts  test_codegen.py  test_e2e.py  test_equivalence.py  test_handshake.py  test_schema.json  test_schema_handshake.json  test_server.mjs  test_server.ts  test_server_handshake.mjs  test_server_handshake.ts  test_session.py  test_utils.py
python-client/tests/generated_v2/: __init__.py  _root_client.py  _types.py  test_client.py
(+199 files in other folders)
