[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "river-client"
version = "0.1.0"
description = "Python client for River protocol v2.0"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "websockets>=12.0",
    "msgpack>=1.0",
    "typing_extensions>=4.0",
    "jinja2>=3.0",
    "opentelemetry-api>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
exclude = ["tests/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ty.environment]
extra-paths = ["tests"]

[tool.setuptools.packages.find]
include = ["river*"]

[tool.setuptools.package-data]
"river.codegen" = ["templates/*.j2"]
